<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.internal.InternalFragment">

<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Material">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Invoice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InvoiceNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/Search" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Select"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/SelectAll" />

            <Button
                android:id="@+id/Add"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/Add" />

            <Button
                android:id="@+id/submit"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/Submit" />

            <Button
                android:id="@+id/Clear"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/Clear" />

        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:id="@+id/ResponseTab">
            </TableLayout>
        </HorizontalScrollView>
    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/selectedItemsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp"
                        android:layout_centerInParent="true"/>

    </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/selectedItemsTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text=""-->
<!--                android:textSize="18sp"-->
<!--                android:layout_centerInParent="true"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <Button-->
<!--                    android:id="@+id/Clear"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:backgroundTint="@color/design_default_color_primary"-->
<!--                    android:text="@string/Clear" />-->

<!--            </LinearLayout>-->
<!--        </LinearLayout>-->

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


